
package com.club.interfaces;

public interface Persistable {
    void load();
    void save();
}
