
package com.club.model;

import java.util.UUID;

public abstract class Person {
    protected String id;
    protected String name;
    protected String phone;

    public Person(String id, String name, String phone) {
        this.id = id == null ? UUID.randomUUID().toString() : id;
        this.name = name;
        this.phone = phone;
    }
    public String getId(){ return id; }
    public String getName(){ return name; }
    public String getPhone(){ return phone; }
    public void setName(String name){ this.name = name; }
    public void setPhone(String phone){ this.phone = phone; }
}
