
package com.club.model;
public enum ScheduleStatus {
    SCHEDULED, COMPLETED, CANCELLED
}
